[package]
name = "rust-quiz"
version = "0.1.0"
edition = "2024"

[lib]
name = "rust_quiz"
path = "src/lib.rs"

[[bin]]
name = "rust-quiz"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
crossterm = "0.29.0"
futures-util = "0.3"
ratatui = "0.30.0"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
tokio-tungstenite = "0.26"
uuid = { version = "1", features = ["v4"] }
